--- a/Gravity_intro1.Rmd
+++ b/Gravity_intro1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "The Gravity Model"
-author: "Jesus Davila- Sara Sabino- Adoracion Hernandez"
+author: "Jesus Davila- Sara Savino- Adoracion Hernandez"
 date: "10/2021"
 output:
   pdf_document: default
